--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://tanishabisht.github.io/Flight-Booking-Frontend",
   "name": "flightbooking",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,7 @@
     "date-fns": "^2.29.3",
     "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
+    "gh-pages": "^4.0.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,6 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
