update readme + change url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://tanishabisht.github.io/flightbooking",
+  "homepage": "http://tanishabisht.github.io/Fullstack-FlightBookingFrontend",
   "name": "flightbooking",
   "version": "0.1.0",
   "private": true,
